# SmartIR-Zigbee-Tools

./: .gitignore  LICENSE  Makefile  README.md  properties.env  pyproject.toml
app/: main.py  settings.py
app/src/application/: generate_climate_json.py
app/src/domain/: abstract_controller.py  exceptions.py  mqtt_client.py
app/src/domain/controllers/: moes_ufo_r11_controller.py
app/src/infrastructure/: mosquitto_mqtt_client.py
app/tests/application/: conftest.py  test_generate_climate_json.py
app/tests/files/: correct_inputs_expected_output.json  correct_inputs_with_auto_operation_expected_output.json  correct_inputs_with_dry_operation_expected_output.json  mosquitto.conf  mosquitto.passwd  mosquitto_docker_compose.yml
app/tests/infrastructure/: conftest.py  test_mosquitto_mqtt_client.py
